--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
-    "path": "^0.12.7",
-    "react-toastify": "^10.0.5"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
